--- a/composer.json
+++ b/composer.json
@@ -48,6 +48,12 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "scripts": {
+		"cache-clear": [
+			"php artisan cache:clear && php artisan config:clear && php artisan route:clear && php artisan view:clear"
+		],
+		"test":[
+			"phpunit"
+		],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
