--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     "require-dev": {
         "facade/ignition": "^1.4",
         "fzaninotto/faker": "^1.4",
+        "laravel/dusk": "^5.6",
         "laravel/ui": "^1.1",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
@@ -53,6 +54,11 @@
 		],
 		"test":[
 			"phpunit"
+		],
+		"db-re": [
+			"@php artisan migrate:reset",
+			"@php artisan migrate",
+			"@php artisan db:seed"
 		],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
