--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "bulma": "^0.8.0",
-        "highlight.js": "^9.16.2"
+        "highlight.js": "^9.16.2",
+        "marked": "^0.8.0"
     }
 }
