--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     },
     "dependencies": {
         "bulma": "^0.8.0",
+        "chart.js": "^2.9.3",
         "highlight.js": "^9.16.2",
-        "marked": "^0.8.0"
+        "marked": "^0.8.0",
+        "vue-chartjs": "^3.5.0"
     }
 }
