--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "chart.js": "^2.9.3",
         "highlight.js": "^9.16.2",
         "marked": "^0.8.0",
-        "vue-chartjs": "^3.5.0"
+        "vue-chartjs": "^3.5.0",
+        "vue-google-charts": "^0.3.2"
     }
 }
