--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
         "highlight.js": "^9.16.2",
         "marked": "^0.8.0",
         "vue-chartjs": "^3.5.0",
-        "vue-google-charts": "^0.3.2"
+        "vue-google-charts": "^0.3.2",
+        "vue-router": "^3.3.4",
+        "vuex": "^3.5.0"
     }
 }
