--- a/package.json
+++ b/package.json
@@ -7,20 +7,43 @@
         "watch-poll": "npm run watch -- --watch-poll",
         "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "test": "jest"
+    },
+    "jest": {
+        "moduleFileExtensions": [
+            "js",
+            "json",
+            "vue"
+        ],
+        "transform": {
+            "^.+\\.vue$": "<rootDir>/node_modules/vue-jest",
+            "^.+\\.js$": "<rootDir>/node_modules/babel-jest"
+        },
+        "testRegex": "resources/js/test/.*.js$"
     },
     "devDependencies": {
-        "axios": "^0.19",
+        "@vue/test-utils": "^1.0.3",
+        "axios": "^0.19.2",
+        "babel-core": "^6.26.3",
+        "babel-jest": "^26.1.0",
+        "babel-plugin-transform-object-rest-spread": "^6.26.0",
+        "babel-preset-env": "^1.7.0",
+        "babel-preset-es2015": "^6.24.1",
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
+        "fetch-mock": "^9.10.3",
+        "jest": "^26.1.0",
         "jquery": "^3.2",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.13",
+        "node-fetch": "^2.6.0",
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.20.1",
         "sass-loader": "7.*",
         "vue": "^2.5.17",
+        "vue-jest": "^3.0.6",
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
