--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,16 @@
 {
-  "presets": [["env", { "modules": false }]],
-  "env": {
-    "test": {
-      "presets": [["env", { "targets": { "node": "current" } }]]
-    }
-  },
-  "plugins": [
-    ["transform-object-rest-spread"]
-  ]
+	"presets": [
+		[
+			"@babel/env",
+			{
+				"targets": {
+					"edge": "17",
+					"firefox": "60",
+					"chrome": "67",
+					"safari": "11.1",
+				},
+				"useBuiltIns": "usage"
+			}
+		]
+	]
 }
