--- a/package.json
+++ b/package.json
@@ -23,24 +23,25 @@
         "testRegex": "resources/js/test/.*.js$"
     },
     "devDependencies": {
+        "@babel/core": "^7.10.5",
+        "@babel/polyfill": "^7.10.4",
+        "@babel/preset-env": "^7.10.4",
         "@vue/test-utils": "^1.0.3",
         "axios": "^0.19.2",
         "babel-core": "^6.26.3",
         "babel-jest": "^26.1.0",
-        "babel-plugin-transform-object-rest-spread": "^6.26.0",
-        "babel-preset-env": "^1.7.0",
-        "babel-preset-es2015": "^6.24.1",
         "bootstrap": "^4.0.0",
+        "core-js": "2",
         "cross-env": "^5.1",
         "fetch-mock": "^9.10.3",
         "jest": "^26.1.0",
         "jquery": "^3.2",
         "laravel-mix": "^4.0.7",
-        "lodash": "^4.17.13",
+        "lodash": "^4.17.19",
         "node-fetch": "^2.6.0",
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
-        "sass": "^1.20.1",
+        "sass": "^1.26.10",
         "sass-loader": "7.*",
         "vue": "^2.5.17",
         "vue-jest": "^3.0.6",
@@ -54,6 +55,6 @@
         "vue-chartjs": "^3.5.0",
         "vue-google-charts": "^0.3.2",
         "vue-router": "^3.3.4",
-        "vuex": "^3.5.0"
+        "vuex": "^3.5.1"
     }
 }
