update circle ci config.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,20 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
+       - run:
+          name: Install MeCab(and php-mecab
+          command: |
+            apt-get update &&
+            apt-get -y install mecab libmecab-dev mecab-ipadic-utf8 &&
+            git clone https://github.com/rsky/php-mecab.git &&
+            cd php-mecab/mecab/ &&
+            phpize &&
+            ./configure &&
+            make &&
+            make test &&
+            make install &&
+            php -r "\$h=fopen('/etc/php.ini','a');fwrite(\$h,'extension=mecab.so'.\"\n\");";
+
       - run: composer install -n --prefer-dist
 
       - save_cache:
