--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,11 +39,8 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
-       - run:
-          name: Install MeCab(and php-mecab
-          command: |
-            apt-get update &&
-            apt-get -y install mecab libmecab-dev mecab-ipadic-utf8 &&
+       - run: apt-get update &&
+           apt-get -y install mecab libmecab-dev mecab-ipadic-utf8 &&
             git clone https://github.com/rsky/php-mecab.git &&
             cd php-mecab/mecab/ &&
             phpize &&
