--- a/package.json
+++ b/package.json
@@ -23,13 +23,19 @@
         "testRegex": "resources/js/test/.*.js$"
     },
     "devDependencies": {
-        "@babel/core": "^7.10.5",
-        "@babel/polyfill": "^7.10.4",
-        "@babel/preset-env": "^7.10.4",
+        "@babel/core": "^7.11.4",
+        "@babel/preset-env": "^7.11.0",
         "@vue/test-utils": "^1.0.3",
         "axios": "^0.19.2",
         "babel-core": "^6.26.3",
         "babel-jest": "^26.1.0",
+        "babel-plugin-lodash": "^3.3.4",
+        "babel-plugin-transform-class-properties": "^6.24.1",
+        "babel-plugin-transform-object-rest-spread": "^6.26.0",
+        "babel-polyfill": "^6.26.0",
+        "babel-preset-env": "^1.7.0",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-es2016": "^6.24.1",
         "bootstrap": "^4.0.0",
         "core-js": "2",
         "cross-env": "^5.1",
