--- a/.babelrc
+++ b/.babelrc
@@ -2,5 +2,6 @@
     "presets": [
 		"@babel/preset-env"
     ],
-	"plugins": ["babel-plugin-transform-class-properties", "babel-plugin-transform-object-rest-spread"]
+	"plugins": ["babel-plugin-transform-class-properties",
+				"@babel/plugin-proposal-object-rest-spread"]
 }
