--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     },
     "devDependencies": {
         "@babel/core": "^7.11.4",
+        "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
         "@babel/preset-env": "^7.11.0",
         "@vue/test-utils": "^1.0.3",
         "axios": "^0.19.2",
