--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "@babel/preset-env": "^7.11.0",
         "@vue/test-utils": "^1.0.3",
         "axios": "^0.19.2",
-        "babel-core": "^6.26.3",
+        "babel-core": "7.0.0-bridge.0",
         "babel-jest": "^26.1.0",
         "babel-plugin-lodash": "^3.3.4",
         "babel-plugin-transform-class-properties": "^6.24.1",
