--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+	"babel-plugin-transform-class-properties": "^6.24.1",
         "bulma": "^0.8.0",
         "chart.js": "^2.9.3",
         "highlight.js": "^9.16.2",
